--- a/mcu/nano33ble/setup.htm
+++ b/mcu/nano33ble/setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega32U4 &gt;&gt; Arduino</h3>
+<h3>(ARM Cortex-M4) nRF52840 (Arduino Nano 33 BLE) &gt;&gt; Arduino</h3>
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
@@ -77,6 +77,33 @@ $ arduino-cli core install arduino:avr
     Installing platform arduino:avr@1.8.6...
     Configuring platform....
     Platform arduino:avr@1.8.6 installed
+
+$ arduino-cli core install arduino:mbed_nano
+    Downloading packages...
+    arduino:openocd@0.11.0-arduino2 downloaded
+    arduino:arm-none-eabi-gcc@7-2017q4 downloaded
+    arduino:bossac@1.9.1-arduino2 downloaded
+    arduino:dfu-util@0.10.0-arduino1 downloaded
+    arduino:rp2040tools@1.0.6 downloaded
+    arduino:mbed_nano@4.0.2 downloaded
+    Installing arduino:openocd@0.11.0-arduino2...
+    Configuring tool....
+    arduino:openocd@0.11.0-arduino2 installed
+    Installing arduino:arm-none-eabi-gcc@7-2017q4...
+    Configuring tool....
+    arduino:arm-none-eabi-gcc@7-2017q4 installed
+    Installing arduino:bossac@1.9.1-arduino2...
+    Configuring tool....
+    arduino:bossac@1.9.1-arduino2 installed
+    Installing arduino:dfu-util@0.10.0-arduino1...
+    Configuring tool....
+    arduino:dfu-util@0.10.0-arduino1 installed
+    Installing arduino:rp2040tools@1.0.6...
+    Configuring tool....
+    arduino:rp2040tools@1.0.6 installed
+    Installing platform arduino:mbed_nano@4.0.2...
+    Configuring platform....
+    Platform arduino:mbed_nano@4.0.2 installed
 </pre><br>
 
 <p>
