--- a/mcu/nano33ble/led.htm
+++ b/mcu/nano33ble/led.htm
@@ -44,40 +44,49 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega32U4 &gt;&gt; Arduino</h3>
-<p><b>開發環境</b></p>
+<h3>(ARM Cortex-M4) nRF52840 (Arduino Nano 33 BLE) &gt;&gt; Arduino</h3>
+<p><b>LED</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
 1. <a href="https://swf.com.tw/?p=1840">cubie</a><br>
 2. <a href="https://arduino.github.io/arduino-cli/0.31/installation/">arduino-cli</a><br><br>
 
-如下：
+步驟如下：<br>
+1. 連接Nano33BLE板子到PC<br>
+2. 執行如下命令
 </p>
 <pre>
 $ cd
-$ wget https://downloads.arduino.cc/arduino-cli/arduino-cli_latest_Linux_64bit.tar.gz
-$ tar xvf arduino-cli_latest_Linux_64bit.tar.gz
-$ sudo mv arduino-cli /usr/local/bin/
-$ arduino-cli core install arduino:avr
-    Downloading packages...
-    arduino:avr-gcc@7.3.0-atmel3.6.1-arduino7 downloaded                                                      
-    arduino:avrdude@6.3.0-arduino17 downloaded                                                                
-    arduino:arduinoOTA@1.3.0 downloaded                                                                       
-    arduino:avr@1.8.6 downloaded                                                                              
-    Installing arduino:avr-gcc@7.3.0-atmel3.6.1-arduino7...
-    Configuring tool....
-    arduino:avr-gcc@7.3.0-atmel3.6.1-arduino7 installed
-    Installing arduino:avrdude@6.3.0-arduino17...
-    Configuring tool....
-    arduino:avrdude@6.3.0-arduino17 installed
-    Installing arduino:arduinoOTA@1.3.0...
-    Configuring tool....
-    arduino:arduinoOTA@1.3.0 installed
-    Installing platform arduino:avr@1.8.6...
-    Configuring platform....
-    Platform arduino:avr@1.8.6 installed
+$ arduino-cli sketch new blink
+$ vim blink/blink.ino
+</pre>
+<pre class="brush:cpp">
+void setup() {
+    pinMode(LED_BUILTIN, OUTPUT);
+}
+
+void loop() {
+    digitalWrite(LED_BUILTIN, HIGH);
+    delay(1000);
+    digitalWrite(LED_BUILTIN, LOW);
+    delay(1000);
+}
+</pre>
+<pre>
+$ arduino-cli compile --fqbn arduino:mbed_nano:nano33ble blink
+$ arduino-cli board list
+    Port         Protocol Type              Board Name          FQBN                        Core
+    /dev/ttyACM0 serial   Serial Port (USB) Arduino Nano 33 BLE arduino:mbed_nano:nano33ble arduino:mbed_nano
+
+$ arduino-cli upload --port /dev/ttyACM0 --fqbn arduino:mbed_nano:nano33ble blink
 </pre><br>
+
+<p>
+完成<br>
+<img src="led/1.jpg" class="maxSize"><br>
+<img src="led/2.jpg" class="maxSize">
+</p>
 
 <p>
 <br><a href="../../mcu.htm">返回上一頁</a>
