MinGW Fix 'undefined reference to InitCommonControlsEx' issue.

--- a/program.htm
+++ b/program.htm
@@ -1130,6 +1130,10 @@ MinGW</h3>
     解決"junk (%esp) after expression"問題</a><br>
 
     &lowast;
+    <a href="program/mingw/fix_initcomm.htm">
+    解決"undefined reference to InitCommonControlsEx"問題</a><br>
+
+    &lowast;
     <a href="program/mingw/fix_hid.htm">
     解決"undefined reference to HidD_GetHidGuid(_GUID*)@4"問題</a><br>
 
