IDA Pro How to rebase program.

--- a/reverse.htm
+++ b/reverse.htm
@@ -230,6 +230,10 @@ Patch License(v7.3)</a><br>
 如何顯示OPCode</a><br>
 
 &lowast;
+<a href="reverse/idapro/rebase.htm">
+如何Rebase Image Base</a><br>
+
+&lowast;
 <a href="reverse/idapro/graph_overview_jpg.htm">
 如何輸出Graph overview</a><br>
 
