(MCU AVR) ATmega32U4 (Arduino Micro) Refined.

--- a/mcu.htm
+++ b/mcu.htm
@@ -92,10 +92,10 @@
     <a href="#pic12f1822"><img src="img/photos/pic12f1822.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU PIC) PIC12F1822"/></a>
     <a href="#attiny13"><img src="img/photos/attiny13.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATtiny13"/></a>
     <a href="#attiny85"><img src="img/photos/attiny85.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATtiny85"/></a>
-    <a href="#arduino-micro"><img src="img/photos/arduino-micro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega32U4"/></a>
-    <a href="#arduino-nano"><img src="img/photos/arduino-nano.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega328"/></a>
-    <a href="#arduino-uno"><img src="img/photos/arduino-uno.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega328P"/></a>
-    <a href="#arduino-mega"><img src="img/photos/arduino-mega.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega2560"/></a>
+    <a href="#arduino-micro"><img src="img/photos/arduino-micro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega32U4 (Arduino Micro)"/></a>
+    <a href="#arduino-nano"><img src="img/photos/arduino-nano.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega328 (Arduino Nano)"/></a>
+    <a href="#arduino-uno"><img src="img/photos/arduino-uno.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega328P (Arduino Uno)"/></a>
+    <a href="#arduino-mega"><img src="img/photos/arduino-mega.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU AVR) ATmega2560 (Arduino Mega)"/></a>
     <a href="#stm8s001"><img src="img/photos/stm8s001.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU STM8) STM8S001"/></a>
     <a href="#stm8s103"><img src="img/photos/stm8s103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU STM8) STM8S103"/></a>
     <a href="#esp8266mod"><img src="img/photos/esp8266mod.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU Tensilica) L106"/></a>
@@ -1014,7 +1014,7 @@ ATtiny85電路圖</a><br>
 
 <div id="arduino-micro"></div>
 <h3><img src="img/photos/arduino-micro.jpg" class="floatLeft"/>
-<b>(MCU AVR)</b> ATmega32U4</h3>
+<b>(MCU AVR)</b> ATmega32U4 (Arduino Micro)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
@@ -1039,7 +1039,7 @@ ATtiny85電路圖</a><br>
 
 <div id="arduino-nano"></div>
 <h3><img src="img/photos/arduino-nano.jpg" class="floatLeft"/>
-<b>(MCU AVR)</b> ATmega328</h3>
+<b>(MCU AVR)</b> ATmega328 (Arduino Nano)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
@@ -1064,7 +1064,7 @@ ATtiny85電路圖</a><br>
 
 <div id="arduino-uno"></div>
 <h3><img src="img/photos/arduino-uno.jpg" class="floatLeft"/>
-<b>(MCU AVR)</b> ATmega328P</h3>
+<b>(MCU AVR)</b> ATmega328P (Arduino Uno)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
@@ -1101,7 +1101,7 @@ Arduino IDE添加Atmega88</a><br>
 
 <div id="arduino-mega"></div>
 <h3><img src="img/photos/arduino-mega.jpg" class="floatLeft"/>
-<b>(MCU AVR)</b> ATmega2560</h3>
+<b>(MCU AVR)</b> ATmega2560 (Arduino Mega)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
