--- a/mcu/atmega32u4/sch.htm
+++ b/mcu/atmega32u4/sch.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega32U4</h3>
+<h3>(MCU AVR) ATmega32U4 (Arduino Micro)</h3>
 <p><b>電路圖</b></p>
 <hr size="1">
 <p>
