--- a/mcu/atmega32u4/led.htm
+++ b/mcu/atmega32u4/led.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega32U4 &gt;&gt; Arduino</h3>
+<h3>(MCU AVR) ATmega32U4 (Arduino Micro) &gt;&gt; Arduino</h3>
 <p><b>LED</b></p>
 <hr size="1">
 <p>
