--- a/mcu/atmega328/pinout.htm
+++ b/mcu/atmega328/pinout.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega328</h3>
+<h3>(MCU AVR) ATmega328 (Arduino Nano)</h3>
 <p><b>腳位</b></p>
 <hr size="1">
 <p>
