(MCU AVR) ATmega328P (Arduino Uno) Added pinout and schematic images, refined.

--- a/mcu/atmega328p/sch.htm
+++ b/mcu/atmega328p/sch.htm
@@ -45,46 +45,15 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>(MCU AVR) ATmega328P (Arduino Uno)</h3>
-<p><b>更新KTduino Nano(CH340G) Bootloader</b></p>
+<p><b>電路圖</b></p>
 <hr size="1">
 <p>
-先把Arduino Uno當成一台燒錄器，因此，先下載ArduinoISP<br>
-<img src="fix_usbisp/1.jpg" class="maxSize"><br><br>
+參考資訊：<br>
+1. <a href="https://content.arduino.cc/assets/UNO-TH_Rev3e_sch.pdf">pdf</a><br><br>
 
-選擇Port<br>
-<img src="fix_usbisp/2.jpg" class="maxSize"><br><br>
-
-下載<br>
-<img src="fix_usbisp/3.jpg" class="maxSize"><br><br>
-
-腳位如下：
+如下：<br>
+<img src="sch/1.jpg" class="maxSize">
 </p>
-<table>
-<tr><th>Arduino UNO</th><th>KTduino Nano(CH340G)</th></tr>
-  <tr><td>REST</td><td>10uF</td></tr>
-  <tr><td>Pin10</td><td>RST</td></tr>
-  <tr><td>ICSP1</td><td>ICSP1</td></tr>
-  <tr><td>ICSP2</td><td>ICSP2</td></tr>
-  <tr><td>ICSP4</td><td>ICSP4</td></tr>
-  <tr><td>ICSP5</td><td>ICSP5</td></tr>
-  <tr><td>ICSP6</td><td>ICSP6</td></tr>
-</table>
-<p>
-<img src="nano_bootloader/4.jpg" class="maxSize"><br><br>
-
-Board: Arduino Nano<br>
-Processor: ATmega328P (Old Bootloader)<br>
-<img src="nano_bootloader/1.jpg" class="maxSize"><br><br>
-
-Burn Bootloader<br>
-<img src="nano_bootloader/2.jpg" class="maxSize"><br><br>
-
-燒錄完成<br>
-<img src="nano_bootloader/3.jpg" class="maxSize"><br><br>
-
-完成<br>
-<img src="nano_bootloader/5.jpg" class="maxSize"><br><br>
-<p/>
 
 <p>
 <br><a href="../../mcu.htm">返回上一頁</a>
