--- a/mcu.htm
+++ b/mcu.htm
@@ -1068,6 +1068,14 @@ ATtiny85電路圖</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/atmega328p/pinout.htm">
+腳位</a><br>
+
+&lowast;
+<a href="mcu/atmega328p/sch.htm">
+電路圖</a><br>
+
+&lowast;
 <a href="mcu/atmega328p/add_attiny85.htm">
 Arduino IDE添加Attiny85</a><br>
 
