--- a/mcu/atmega328p/add_atmega88.htm
+++ b/mcu/atmega328p/add_atmega88.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega328P</h3>
+<h3>(MCU AVR) ATmega328P (Arduino Uno)</h3>
 <p><b>Arduino IDE添加Atmega88</b></p>
 <hr size="1">
 <p>
