--- a/mcu/atmega328p/led.htm
+++ b/mcu/atmega328p/led.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega328P &gt;&gt; Arduino</h3>
+<h3>(MCU AVR) ATmega328P (Arduino Uno) &gt;&gt; Arduino</h3>
 <p><b>LED</b></p>
 <hr size="1">
 <p>
