(MCU AVR) ATmega2560 (Arduino Mega) Added pinout and schematic images, refined.

--- a/mcu.htm
+++ b/mcu.htm
@@ -1113,6 +1113,14 @@ Arduino IDE添加Atmega88</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/atmega2560/pinout.htm">
+腳位</a><br>
+
+&lowast;
+<a href="mcu/atmega2560/sch.htm">
+電路圖</a><br>
+
+&lowast;
 <a href="mcu/atmega2560/fix_adc.htm">
 提高analogRead()讀取速率</a><br>
 
