--- a/mcu/atmega2560/fix_adc.htm
+++ b/mcu/atmega2560/fix_adc.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>ATmega2560</h3>
+<h3>(MCU AVR) ATmega2560 (Arduino Mega)</h3>
 <p><b>提高analogRead()讀取速率</b></p>
 <hr size="1">
 <p>
@@ -55,22 +55,22 @@
 程式如下：
 </p>
 <pre class="brush:cpp">
-unsigned short buf[16]={0};
-int cc=0, adc[16]={A0, A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15};
+unsigned short buf[16] = {0};
+int cc=0, adc[16] = {A0, A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13, A14, A15};
 
 void setup() {
-  Serial.begin(460800);
-  ADCSRA|= (1 &lt;&lt; ADPS2);
-  ADCSRA&amp;= ~(1 &lt;&lt; ADPS1);
-  ADCSRA&amp;= ~(1 &lt;&lt; ADPS0);
-  Serial.flush();
+    Serial.begin(460800);
+    ADCSRA |= (1 &lt;&lt; ADPS2);
+    ADCSRA &amp;= ~(1 &lt;&lt; ADPS1);
+    ADCSRA &amp;= ~(1 &lt;&lt; ADPS0);
+    Serial.flush();
 }
 
 void loop() {
-  for(cc=0; cc&lt;16; cc++){
-    buf[cc] = analogRead(adc[cc]);
-  }
-  Serial.write((unsigned char*)buf, 16);
+    for(cc = 0; cc &lt; 16; cc++){
+        buf[cc] = analogRead(adc[cc]);
+    }
+    Serial.write((unsigned char*)buf, 16);
 }
 </pre>
 <p>
