--- a/mcu/atmega2560/sch.htm
+++ b/mcu/atmega2560/sch.htm
@@ -44,48 +44,16 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>(MCU AVR) ATmega2560 (Arduino Mega) &gt;&gt; Arduino</h3>
-<p><b>LED</b></p>
+<h3>(MCU AVR) ATmega2560 (Arduino Mega)</h3>
+<p><b>電路圖</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://swf.com.tw/?p=1840">cubie</a><br>
-2. <a href="https://arduino.github.io/arduino-cli/0.31/installation/">arduino-cli</a><br><br>
+1. <a href="https://store.arduino.cc/products/arduino-mega-2560-rev3">arduino mega</a><br><br>
 
-步驟如下：<br>
-1. 連接ATmega2560板子到PC<br>
-2. 執行如下命令
-</p>
-<pre>
-$ cd
-$ arduino-cli sketch new blink
-$ vim blink/blink.ino
-</pre>
-<pre class="brush:cpp">
-void setup() {
-    pinMode(LED_BUILTIN, OUTPUT);
-}
-
-void loop() {
-    digitalWrite(LED_BUILTIN, HIGH);
-    delay(1000);
-    digitalWrite(LED_BUILTIN, LOW);
-    delay(1000);
-}
-</pre>
-<pre>
-$ arduino-cli compile --fqbn arduino:avr:mega blink
-$ arduino-cli board list
-    Port         Protocol Type              Board Name                FQBN             Core
-    /dev/ttyACM0 serial   Serial Port (USB) Arduino Mega or Mega 2560 arduino:avr:mega arduino:avr
-
-$ arduino-cli upload --port /dev/ttyACM0 --fqbn arduino:avr:mega blink
-</pre><br>
-
-<p>
-完成<br>
-<img src="led/1.jpg" class="maxSize"><br>
-<img src="led/2.jpg" class="maxSize">
+如下：<br>
+<img src="sch/1.jpg" class="maxSize"><br>
+<img src="sch/2.jpg" class="maxSize">
 </p>
 
 <p>
