--- a/program.htm
+++ b/program.htm
@@ -1105,6 +1105,10 @@ MinGW</h3>
             <a href="program/mingw/cpp_ellipse.htm">
             Draw Ellipse</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/mingw/cpp_polygon.htm">
+            Draw Polygon</a><br>
+
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/mingw/enum_hid.htm">
         Enumerate USB HID</a><br>
