Wine How to draw polygon.

--- a/program.htm
+++ b/program.htm
@@ -899,9 +899,9 @@ Wine</h3>
             <a href="program/wine/cpp_ellipse.htm">
             Draw Ellipse</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_polygon.htm">
-                Polygon</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_polygon.htm">
+            Draw Polygon</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_arc.htm">
