--- a/program.htm
+++ b/program.htm
@@ -421,6 +421,17 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_dlg_event.htm">
             Handle Event</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Single Document Interface (SDI)</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_sdi_window.htm">
+            Create Window</a><br>
+        
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_sdi_event.htm">
+            Handle Event</a><br>
+        
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/nasm/win32_keyboard.htm">
         Keyboard Event</a><br>
