--- a/program/nasm/win32_sdi_event.htm
+++ b/program/nasm/win32_sdi_event.htm
@@ -407,7 +407,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" src="win32_sdi_event/1.jpg" class="maxSize">
+<img style="border:0px" src="win32_sdi_window/1.jpg" class="maxSize">
 </p>
 
 <p>
