--- a/program/wine/cpp_sdi_event.htm
+++ b/program/wine/cpp_sdi_event.htm
@@ -104,7 +104,7 @@ $ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="../nasm/win32_dlg_event/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_sdi_window/1.jpg" class="maxSize">
 </p>
 
 <p>
