MinGW Added description.

--- a/program/mingw/cpp_polygon.htm
+++ b/program/mingw/cpp_polygon.htm
@@ -53,6 +53,8 @@
 2. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 3. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
+Polygon()可以用來繪製多邊形，需要傳入的資訊是一個座標點陣列，用來描述有哪些點需要被連接<br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
