NASM How to draw polygon.

--- a/program.htm
+++ b/program.htm
@@ -475,6 +475,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32_ellipse.htm">
             Draw Ellipse</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_polygon.htm">
+            Draw Polygon</a><br>
+                    
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
