Wayland How to prepare developing environment.

--- a/program.htm
+++ b/program.htm
@@ -81,6 +81,7 @@
     <a href="#fasm"><img src="img/photos/fasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Flat Assembler (FASM)"/></a>
     <a href="#wine"><img src="img/photos/wine.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Wine"/></a>
     <a href="#mingw"><img src="img/photos/mingw.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MinGW"/></a>
+    <a href="#wayland"><img src="img/photos/wayland.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Wayland"/></a>
     <a href="#rust"><img src="img/photos/rust.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Rust"/></a>
     <a href="#sdl"><img src="img/photos/sdl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SDL"/></a>
     <a href="#sfml"><img src="img/photos/sfml.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SFML"/></a>
@@ -1193,6 +1194,19 @@ MinGW</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/mingw/fix_rdynamic.htm">
         解決"x86_64-w64-mingw32-gcc: error: unrecognized command line option -rdynamic"問題</a><br>
+<br><br><br><br>
+
+<div id="wayland"></div>
+<h3><img src="img/photos/wayland.jpg" class="floatLeft"/>
+Wayland</h3>
+<hr size="1"><br><br><br><br><br>
+
+    &oplus;
+    <b>Client</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_setup.htm">
+        開發環境</a><br>    
 <br><br><br><br>
 
 <div id="rust"></div>
