Wayland How to connect to server.

--- a/program.htm
+++ b/program.htm
@@ -1207,6 +1207,10 @@ Wayland</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wayland/client_setup.htm">
         開發環境</a><br>    
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_connect.htm">
+        connect server</a><br>    
 <br><br><br><br>
 
 <div id="rust"></div>
