Wayland How to register listener.

--- a/program.htm
+++ b/program.htm
@@ -1206,11 +1206,15 @@ Wayland</h3>
 
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wayland/client_setup.htm">
-        開發環境</a><br>    
+        開發環境</a><br>
         
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wayland/client_connect.htm">
-        connect server</a><br>    
+        connect server</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_listen.htm">
+        add listener</a><br>
 <br><br><br><br>
 
 <div id="rust"></div>
