Wayland How to bind compositor.

--- a/program.htm
+++ b/program.htm
@@ -1215,6 +1215,10 @@ Wayland</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wayland/client_listen.htm">
         add listener</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_bind.htm">
+        bind compositor</a><br>
 <br><br><br><br>
 
 <div id="rust"></div>
