Wayland How to use WAYLAND_DEBUG.

--- a/program.htm
+++ b/program.htm
@@ -1219,6 +1219,10 @@ Wayland</h3>
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wayland/client_bind.htm">
         bind compositor</a><br>
+
+    &lowast;
+    <a href="program/wayland/debug.htm">
+    WAYLAND_DEBUG</a><br>
 <br><br><br><br>
 
 <div id="rust"></div>
