--- a/program/wayland/client_connect.htm
+++ b/program/wayland/client_connect.htm
@@ -50,7 +50,8 @@
 <p>
 參考資訊：<br>
 1. <a href="https://wayland.freedesktop.org/docs/html/apa.html">wayland</a><br>
-2. <a href="https://bugaevc.gitbooks.io/writing-wayland-clients/content/">writing-wayland-clients</a><br><br>
+2. <a href="https://bugaevc.gitbooks.io/writing-wayland-clients/content/">writing-wayland-clients</a><br>
+3. <a href="https://jan.newmarch.name/Wayland/index.html">programming wayland clients</a><br><br>
 
 main.c
 </p>
