--- a/program/wayland/client_connect.htm
+++ b/program/wayland/client_connect.htm
@@ -58,17 +58,18 @@ main.c
 <pre class="brush:cpp">
 #include &lt;stdio.h&gt;
 #include &lt;wayland-client.h&gt;
-
+ 
 int main(int argc, char **argv)
 {
-    struct wl_display *display = wl_display_connect(NULL);
-
-    if (display == NULL) {
+    struct wl_display *dis = wl_display_connect(NULL);
+ 
+    if (dis == NULL) {
         printf("failed to connect !\n");
         return -1;
     }
+
     printf("connected !\n");
-    wl_display_disconnect(display);
+    wl_display_disconnect(dis);
     return 0;
 }
 </pre><br>
