--- a/program/wayland/client_listen.htm
+++ b/program/wayland/client_listen.htm
@@ -58,30 +58,30 @@ main.c
 <pre class="brush:cpp">
 #include &lt;stdio.h&gt;
 #include &lt;wayland-client.h&gt;
-
-void registry_global_handler(void *data, struct wl_registry *registry, uint32_t name, const char *interface, uint32_t version)
+ 
+void cb_handle(void *dat, struct wl_registry *reg, uint32_t name, const char *intf, uint32_t ver)
 {
-    printf("interface: '%s', version: %u, name: %u\n", interface, version, name);
+    printf("interface: '%s', version: %u, name: %u\n", intf, ver, name);
 }
-
-void registry_global_remove_handler(void *data, struct wl_registry *registry, uint32_t name)
+ 
+void cb_remove(void *dat, struct wl_registry *reg, uint32_t name)
 {
     printf("removed: %u\n", name);
 }
-
+ 
 int main(int argc, char **argv)
 {
-    struct wl_display *display = wl_display_connect(NULL);
-    struct wl_registry *registry = wl_display_get_registry(display);
-    struct wl_registry_listener registry_listener = {
-        .global = registry_global_handler,
-        .global_remove = registry_global_remove_handler
+    struct wl_display *dis = wl_display_connect(NULL);
+    struct wl_registry *reg = wl_display_get_registry(dis);
+    struct wl_registry_listener cb = {
+        .global = cb_handle,
+        .global_remove = cb_remove
     };
-
-    wl_registry_add_listener(registry, &amp;registry_listener, NULL);
-
+ 
+    wl_registry_add_listener(reg, &amp;cb, NULL);
+ 
     while (1) {
-        wl_display_dispatch(display);
+        wl_display_dispatch(dis);
     }
 }
 </pre><br>
