--- a/program/wayland/client_listen.htm
+++ b/program/wayland/client_listen.htm
@@ -58,17 +58,17 @@ main.c
 <pre class="brush:cpp">
 #include &lt;stdio.h&gt;
 #include &lt;wayland-client.h&gt;
- 
-void cb_handle(void *dat, struct wl_registry *reg, uint32_t name, const char *intf, uint32_t ver)
+  
+void cb_handle(void *dat, struct wl_registry *reg, uint32_t id, const char *intf, uint32_t ver)
 {
-    printf("interface: '%s', version: %u, name: %u\n", intf, ver, name);
+    printf("%s, intf:%s, ver:%u, id:%u\n", __func__, intf, ver, id);
 }
- 
-void cb_remove(void *dat, struct wl_registry *reg, uint32_t name)
+  
+void cb_remove(void *dat, struct wl_registry *reg, uint32_t id)
 {
-    printf("removed: %u\n", name);
+    printf("%s, %u\n", __func__, id);
 }
- 
+  
 int main(int argc, char **argv)
 {
     struct wl_display *dis = wl_display_connect(NULL);
@@ -77,12 +77,12 @@ int main(int argc, char **argv)
         .global = cb_handle,
         .global_remove = cb_remove
     };
- 
+  
     wl_registry_add_listener(reg, &amp;cb, NULL);
- 
-    while (1) {
-        wl_display_dispatch(dis);
-    }
+    wl_display_dispatch(dis);
+    wl_display_roundtrip(dis);
+    wl_display_disconnect(dis);
+    return 0;
 }
 </pre><br>
 
@@ -92,20 +92,19 @@ int main(int argc, char **argv)
 <pre>
 $ gcc main.c -o main -lwayland-client
 $ ./main
-    interface: 'wl_compositor', version: 3, name: 1
-    interface: 'wl_data_device_manager', version: 1, name: 2
-    interface: 'wl_shm', version: 1, name: 3
-    interface: 'qt_hardware_integration', version: 1, name: 4
-    interface: 'android_wlegl', version: 2, name: 5
-    interface: 'qt_surface_extension', version: 1, name: 6
-    interface: 'qt_touch_extension', version: 1, name: 7
-    interface: 'qt_windowmanager', version: 1, name: 8
-    interface: 'wl_seat', version: 3, name: 9
-    interface: 'wl_output', version: 2, name: 10
-    interface: 'wl_shell', version: 1, name: 11
-    interface: 'lipstick_recorder_manager', version: 1, name: 12
-    interface: 'alien_manager', version: 1, name: 13
-    ^C
+    cb_handle, intf:wl_compositor, ver:3, id:1
+    cb_handle, intf:wl_data_device_manager, ver:1, id:2
+    cb_handle, intf:wl_shm, ver:1, id:3
+    cb_handle, intf:qt_hardware_integration, ver:1, id:4
+    cb_handle, intf:android_wlegl, ver:2, id:5
+    cb_handle, intf:qt_surface_extension, ver:1, id:6
+    cb_handle, intf:qt_touch_extension, ver:1, id:7
+    cb_handle, intf:qt_windowmanager, ver:1, id:8
+    cb_handle, intf:wl_seat, ver:3, id:9
+    cb_handle, intf:wl_output, ver:2, id:10
+    cb_handle, intf:wl_shell, ver:1, id:11
+    cb_handle, intf:lipstick_recorder_manager, ver:1, id:12
+    cb_handle, intf:alien_manager, ver:1, id:13
 </pre><br>
 
 <p>
