Wayland How to draw pixel.

--- a/program.htm
+++ b/program.htm
@@ -1224,6 +1224,10 @@ Wayland</h3>
         <a href="program/wayland/client_surface.htm">
         create surface</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_draw.htm">
+        draw pixel</a><br>
+
     &lowast;
     <a href="program/wayland/debug.htm">
     WAYLAND_DEBUG</a><br>
