Wayland How to create buffer.

--- a/program.htm
+++ b/program.htm
@@ -1225,6 +1225,10 @@ Wayland</h3>
         create surface</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_buffer.htm">
+        create buffer</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wayland/client_draw.htm">
         draw pixel</a><br>
 
