--- a/program.htm
+++ b/program.htm
@@ -1232,6 +1232,10 @@ Wayland</h3>
         <a href="program/wayland/client_draw.htm">
         draw pixel</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_redraw.htm">
+        redraw pixel</a><br>
+
     &lowast;
     <a href="program/wayland/debug.htm">
     WAYLAND_DEBUG</a><br>
