Wayland Fix memory leak.

--- a/program/wayland/client_bind.htm
+++ b/program/wayland/client_bind.htm
@@ -86,6 +86,9 @@ int main(int argc, char **argv)
     wl_display_dispatch(dis);
     wl_display_roundtrip(dis);
     printf("comp=0x%08x\n", comp);
+
+    wl_registry_destroy(reg);
+    wl_compositor_destroy(comp);
     wl_display_disconnect(dis);
     return 0;
 }
