--- a/program/wayland/client_listen.htm
+++ b/program/wayland/client_listen.htm
@@ -81,6 +81,8 @@ int main(int argc, char **argv)
     wl_registry_add_listener(reg, &amp;cb, NULL);
     wl_display_dispatch(dis);
     wl_display_roundtrip(dis);
+
+    wl_registry_destroy(reg);
     wl_display_disconnect(dis);
     return 0;
 }
