--- a/program.htm
+++ b/program.htm
@@ -1236,6 +1236,10 @@ Wayland</h3>
         <a href="program/wayland/client_redraw.htm">
         redraw pixel</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_pingpong.htm">
+        ping and pong</a><br>
+
     &lowast;
     <a href="program/wayland/debug.htm">
     WAYLAND_DEBUG</a><br>
