F(x)tec Pro1 X Refined.

--- a/phone/pro1x/so_build_kernel.htm
+++ b/phone/pro1x/so_build_kernel.htm
@@ -65,10 +65,11 @@ $ tar xvf sailfish_repack_bootimg.tar.gz
 $ cp out/arch/arm64/boot/Image.gz repack/kernel
 $ cd repack
 $ ./run.sh
-</pre>
-<p>
-P.S. 接著進入fastboot模式，刷入boot_new.img即可<br><br>
 
+$ fastboot flash boot_a boot_new.img
+</pre><br>
+
+<p>
 完成<br>
 <img src="so_build_kernel/1.jpg" class="maxSize">
 </p>
