MASM32 How to draw polygon.

--- a/program.htm
+++ b/program.htm
@@ -647,6 +647,10 @@ Set ScrollBar</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/ellipse.htm">
     Draw Ellipse</a><br>
+            
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/polygon.htm">
+    Draw Polygon</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
