Wayland How to use EGL in wayland.

--- a/program.htm
+++ b/program.htm
@@ -1244,6 +1244,10 @@ Wayland</h3>
         <a href="program/wayland/client_pingpong.htm">
         ping and pong</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_egl.htm">
+        EGL</a><br>
+
     &lowast;
     <a href="program/wayland/debug.htm">
     WAYLAND_DEBUG</a><br>
