--- a/program.htm
+++ b/program.htm
@@ -1248,6 +1248,10 @@ Wayland</h3>
         <a href="program/wayland/client_egl.htm">
         EGL</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wayland/client_egl_texture.htm">
+        EGL texture</a><br>
+
     &lowast;
     <a href="program/wayland/debug.htm">
     WAYLAND_DEBUG</a><br>
