(ARM Cortex-M4) nRF52840 (Arduino Nano 33 BLE) Added schematic image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -2508,6 +2508,10 @@ build teensy_loader_cli</a><br>
 <a href="mcu/nano33ble/pinout.htm">
 接腳</a><br>
     
+&lowast;
+<a href="mcu/nano33ble/sch.htm">
+電路圖</a><br>
+    
 &oplus;
 <b>Arduino</b><br>
 
