--- a/program.htm
+++ b/program.htm
@@ -731,6 +731,9 @@ hello, world!</a><br>
         <a href="program/hla/win32_ellipse.htm">
         Draw Ellipse</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_polygon.htm">
+        Draw Polygon</a><br>
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
