--- a/phone.htm
+++ b/phone.htm
@@ -1998,6 +1998,10 @@ F(x)tec Pro1 X</h3>
 如何透過edl備份</a><br>
 
 &lowast;
+<a href="phone/pro1x/fix_speaker.htm">
+解決Speaker只有左聲道的問題</a><br>
+
+&lowast;
 <a href="phone/pro1x/fix_edl.htm">
 解決開機一直處於edl模式的問題</a><br>
 
