FASM How to draw polygon.

--- a/program.htm
+++ b/program.htm
@@ -843,6 +843,9 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_ellipse.htm">
             Draw Ellipse</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_polygon.htm">
+            Draw Polygon</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
