Netwide Assembler (NASM) Refined.

--- a/program/nasm/win32_dlg_window.htm
+++ b/program/nasm/win32_dlg_window.htm
@@ -187,7 +187,7 @@ _start:
 <b>Line 20~34</b>：struc用來定義Struct<br>
 <b>Line 64~71</b>：istruc則是宣告資料(Instance)的意思，at用來指定初始化的資料內容，如果沒有想要做資料初始化，可以省略at<br>
 <b>Line 78~90</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
-<b>Line 93~97</b>：從Queue提取Message(包含視窗、系統事件)，addr用來計算local變數的位址，offset則是global變數位址<br>
+<b>Line 93~97</b>：從Queue提取Message(包含視窗、系統事件)<br>
 <b>Line 101~102</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以執行後，必須使用kill命令強制關閉該視窗<br>
 <b>Line 111~116</b>：一般習慣是在程式進入時，保存Instance、CommandLine的內容<br>
 <b>Line 118~122</b>：呼叫自定義的WinMain()，模擬C語言的WinMain()，當然也可以把內容都寫在start()裡面<br><br>
