Netwide Assembler (NASM) Refined.

--- a/program/nasm/win32x_keyboard.htm
+++ b/program/nasm/win32x_keyboard.htm
@@ -127,7 +127,7 @@ endproc
 proc WinMain, dword hInst, dword hPrevInst, dword CmdLine, dword CmdShow
     locals none
   
-    invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, offset szCaption, \
+    invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, szCaption, \
         WS_OVERLAPPEDWINDOW | WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
     mov [hWin], eax
  
