--- a/program/nasm/win32x_scrollbar.htm
+++ b/program/nasm/win32x_scrollbar.htm
@@ -125,7 +125,7 @@ endproc
 proc WinMain, dword hInst, dword hPrevInst, dword CmdLine, dword CmdShow
     locals none
      
-    invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, offset szCaption, \
+    invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, szCaption, \
         WS_OVERLAPPEDWINDOW | WS_VISIBLE | WS_VSCROLL, 0, 0, 300, 300, NULL, NULL, NULL, NULL
     mov [hWin], eax
     
