NASMX How to handle event.

--- a/program.htm
+++ b/program.htm
@@ -502,6 +502,13 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_dlg_event.htm">
             Handle Event</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Single Document Interface (SDI)</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_sdi_event.htm">
+            Handle Event</a><br>
+        
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/nasm/win32x_keyboard.htm">
         Keyboard Event</a><br>
