NASMX How to create window.

--- a/program.htm
+++ b/program.htm
@@ -506,6 +506,10 @@ Netwide Assembler (NASM)</h3>
         <b>Single Document Interface (SDI)</b><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_sdi_window.htm">
+            Create Window</a><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/nasm/win32x_sdi_event.htm">
             Handle Event</a><br>
         
